# VX-CODE

./: .gitignore  README.md  pyproject.toml
src/vx_code/: run_vxcode.py
src/vx_code/explanations/: base.py  vxcode.py
src/vx_code/models/detr/: engine.py  hubconf.py  main.py  run_with_submitit.py  test_all.py
src/vx_code/models/detr/d2/: converter.py  train_net.py
src/vx_code/models/detr/d2/detr/: detr.py  trainer.py
src/vx_code/models/detr/datasets/: coco.py  coco_eval.py  coco_panoptic.py  panoptic_eval.py  transforms.py
src/vx_code/models/detr/models/: backbone.py  detr.py  matcher.py  position_encoding.py  segmentation.py  transformer.py
src/vx_code/models/detr/util/: misc.py  plot_utils.py
src/vx_code/utils/: reward_functions.py  utils.py
src/vx_code/visualizations/: visualize.py
